# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
# http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "skywalking-core"
version = "0.1.0"
authors = ["Apache Software Foundation (ASF)"]
edition = "2018"
description = "SkyWalking tracing core APIs. Provide the way to build SkyWalking native format traces/spans and propagated context."
license = "Apache 2.0"

[dependencies]
rand = "0.7.3"
base64 = "0.12"
lazy_static = "1.4"
tokio = {version="0.2", features=["rt-threaded", "blocking", "rt-util", "sync"]}
tokio-util = {version="0.3", features=["codec"]}
log = "0.4"
anyhow = "1.0"
get_if_addrs = "0.5.3"
env_logger = "0.7.1"
uuid = { version = "0.8.1", features = ["v4"] }
tonic = "0.3"
prost = "0.6"

[build-dependencies]
tonic-build = "0.3"